# pybibx

./: .gitattributes  .gitignore  Dockerfile  ISSUES.md  README.md  ROADMAP.md  default_deps.txt  gemini.md  gpu_deps.txt  pixi.toml  pyproject.toml  real_world_simulation.py  requirements.txt  ruff.toml  setup.cfg  setup.py
assets/bibs/: dimensions_example.csv  dimensions_sample.bib  dimensions_sample.csv  openalex_example.json  openalex_sample.jsonl
pybibx/base/: __init__.py  pbx.py
pybibx/pybibx/: __init__.py
pybibx/pybibx/base/: __init__.py  pbx.py
tests/: test_pbx.py
tests/data/: sample.bib
