[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybibx"
version = "5.1.4"
authors = [
  { name="Valdecy Pereira", email="valdecy.pereira@gmail.com" },
]
description = "A Bibliometric and Scientometric Library Powered with Artificial Intelligence Tools"
readme = "README.md"
license = { text = "GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "bertopic",
    "bert-extractive-summarizer",
    "chardet",
    "google-generativeai",
    "gensim",
    "llmx",
    "matplotlib",
    "networkx",
    "numba",
    "numpy",
    "pandas",
    "plotly",
    "scipy",
    "scikit-learn",
    "sentencepiece",
    "sentence-transformers",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "umap-learn",
    "openai",
    "wordcloud",
    "importlib-resources",
]

[project.urls]
"Homepage" = "https://github.com/Valdecy/pybibx"
"Bug Tracker" = "https://github.com/Valdecy/pybibx/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mkdocs>=1.4.0",
]