[metadata]
name = pybibx
version = 5.1.4
author = Valdecy Pereira
author_email = valdecy.pereira@gmail.com
description = A Bibliometric and Scientometric Library Powered with Artificial Intelligence Tools
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bertopic
    chardet
    google-generativeai
    gensim
    llmx
    matplotlib
    networkx
    numba
    numpy
    pandas
    plotly
    sentencepiece
    umap-learn
    openai
    wordcloud
    importlib-resources

[options.extras_require]
gpu =
    bertopic
    bert-extractive-summarizer
    sentence-transformers
    torch
    torchvision
    torchaudio
    transformers
